fix align wrapper-skill component

--- a/css/components/skill.css
+++ b/css/components/skill.css
@@ -14,6 +14,7 @@
 .skill .icon{
     margin-right: 25px;
     width: 90px;
+    max-height: 90px;
 }
 
 
