--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -4,7 +4,7 @@
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-   
+    align-items: flex-start;
 }
 
 .wrapper-skill .skill{
